re-work route planification details (#30)
