# swagger.json
@@ -363,6 +363,81 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "HistoricoRutas"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
+                }
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
+                }
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/HistoricoRutas/filter": {
@@ -4120,6 +4195,110 @@
         }
       }
     },
+    "/api/TblPrediccionRutaYTblRuta/filtrar-rutas-por-semana-y-familia-paginadas": {
+      "get": {
+        "tags": [
+          "TblPrediccionRutaYTblRuta"
+        ],
+        "parameters": [
+          {
+            "name": "semana",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "idFamilia",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "pagina",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 1
+            }
+          },
+          {
+            "name": "tamanoPagina",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/TblPrediccionRutaYTblRutaDtoRespuestaPaginacion"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TblPrediccionRutaYTblRutaDtoRespuestaPaginacion"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TblPrediccionRutaYTblRutaDtoRespuestaPaginacion"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/TblPrediccionRutaYTblRuta/historico-rutas": {
       "get": {
         "tags": [
@@ -4166,83 +4345,6 @@
           },
           "404": {
             "description": "Not Found",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/TblPrediccionRutaYTblRuta": {
-      "post": {
-        "tags": [
-          "TblPrediccionRutaYTblRuta"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
-                }
-              }
-            },
-            "text/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
-                }
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/CrearHistoricoRutasDto"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HistoricoRutaDtoIEnumerableDataResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
             "content": {
               "text/plain": {
                 "schema": {
@@ -4313,6 +4415,64 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/TblPrediccionRutaYTblRutaDtoRespuestaPaginacion"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/TblPrediccionRutaYTblRuta/familias-references-by-semana": {
+      "get": {
+        "tags": [
+          "TblPrediccionRutaYTblRuta"
+        ],
+        "parameters": [
+          {
+            "name": "semana",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/Int32ReferenceDtoIEnumerableDataResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Int32ReferenceDtoIEnumerableDataResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Int32ReferenceDtoIEnumerableDataResponse"
                 }
               }
             }
@@ -5365,15 +5525,9 @@
       "CrearHistoricoRutasDto": {
         "type": "object",
         "properties": {
-          "idRutaPrediccion": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
           "idRuta": {
             "type": "integer",
-            "format": "int64",
-            "nullable": true
+            "format": "int64"
           },
           "semanaProduccion": {
             "type": "string",
@@ -5841,6 +5995,9 @@
             "type": "number",
             "format": "double"
           },
+          "sugerencia": {
+            "type": "boolean"
+          },
           "equipmentList": {
             "type": "array",
             "items": {
@@ -5848,11 +6005,8 @@
             },
             "nullable": true
           },
-          "restrictionList": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
+          "restriction": {
+            "type": "string",
             "nullable": true
           }
         },
@@ -5905,6 +6059,37 @@
           },
           "datos": {
             "$ref": "#/components/schemas/HistoricoRutaDtoPaginatedData"
+          }
+        },
+        "additionalProperties": false
+      },
+      "Int32ReferenceDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "label": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "Int32ReferenceDtoIEnumerableDataResponse": {
+        "type": "object",
+        "properties": {
+          "exito": {
+            "type": "string",
+            "nullable": true
+          },
+          "datos": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Int32ReferenceDto"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -6760,6 +6945,10 @@
           "id": {
             "type": "integer",
             "format": "int64"
+          },
+          "nombreRuta": {
+            "type": "string",
+            "nullable": true
           },
           "descripcion": {
             "type": "string",
